<resources>
    <string name="app_name">Go4Lunch</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Carte</string>
    <string name="bottom_navigation_menu_list">Liste</string>
    <string name="bottom_navigation_menu_workmates">Collègues</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!--<string name="facebook_application_id" translatable="false">654397378637543</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb654397378637543</string>
    <string name="twitter_consumer_key">JAWDmFrjWAqW7hyZQZnUy0Hep</string>
    <string name="twitter_consumer_secret">G4rTznbmb35LqZA8t8APdaY7dxdYHEHsYzyA3PfKY8viPZpk0i</string> -->

    <!-- Activity login -->
    <string name="connexionCanceled">Connexion annulée</string>
    <string name="noInternetConnexion">Pas de connexion internet</string>
    <string name="unKnownError">Erreur inconnue</string>
    <!-- Activity main -->
    <string name="yourLunch">Votre repas</string>
    <string name="didntSelectRestaurant">Vous n\'avez pas selectionné de restaurant</string>
    <string name="youEatAt">Vous mangez à</string>
    <!-- Workmates Adapter -->
    <string name="hasntDecidedYet">n\'a pas encore décidé</string>
    <string name="isEatingAt">mange à</string>
    <string name="isJoining">se joint</string>
    <!-- List Fragment -->
    <string name="imHungry">J\'ai faim!</string>
    <string name="authorizationIsRequiredToUseApplication">L\'autorisation est obligatoire pour utiliser l\'application</string>
    <string name="weCannotAccessYourLocation">Nous n\'arrivons pas à accéder à votre localisation</string>
    <!-- Workmates Fragment -->
    <string name="availableWorkmates">Collègues disponibles</string>
    <!-- Manifest -->
    <string name="settings">Paramètres</string>
    <!-- activity rest details  -->
    <string name="call">Appel</string>
    <string name="like">Aimer</string>
    <string name="webSite">Site</string>
    <!--  activity settings  -->
    <string name="enableNotificationsOncePerDay">Activer les notifcations (une fois par jour)</string>
    <!-- fragment list -->
    <string name="openUntil7Pm">Ouvert jusqu\'à 19 heures</string>
    <!-- fragment workmates item -->
    <string name="scarlettIsEatingFrenchLeZinc">Scarlett mange français (Le Zinc)</string>
    <!-- AlarmReceiver item -->
    <string name="lunchInformations">Information repas</string>
    <string name="receiveDailyNotificationsAboutYourLunches">Recevez au quotidien des notifications sur vos déjeuners</string>
    <string name="noWorkmateWillJoinYou">Aucun collègue ne se joindra à vous</string>
    <string name="youEatWith">Vous mangez avec</string>

    <string name="menu_search">Chercher</string>
    <string name="activity_main_drawer_lunch">VOS REPAS</string>
    <string name="activity_main_drawer_settings">REGLAGES</string>
    <string name="activity_main_drawer_logout">DECONNEXION</string>

    <!-- PlaceUtils-->
    <string name="closed">Fermé</string>
    <string name="nospecified">Non renseigné</string>
    <string name="hour">h</string>
    <string name="openuntil">Open until</string>

    <!-- activityLogin-->
    <string name="findAniceRestaurantAndInviteYourCoWorkersForLunch">Trouve un bon restaurant et invite tes collègues pour déjeuner !</string>
    <string name="signInWithFacebook">Connectez vous avec Facebook</string>
    <string name="signInWithGoogle">Connectez vous avec Google</string>
    <string name="signInWithTwitter">Connectez vous avec Twitter</string>













































</resources>

