<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_main_bottom_map"
        android:enabled="true"
        android:icon="@drawable/ic_mapview"
        android:title="@string/bottom_navigation_menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_main_bottom_list"
        android:enabled="true"
        android:icon="@drawable/ic_listview"
        android:title="@string/bottom_navigation_menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_main_bottom_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_workmates"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>