<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dejeuner"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:tint="@color/colorText"
        android:src="@drawable/ic_bowl"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:text="Go4Lunch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:text="@string/findAniceRestaurantAndInviteYourCoWorkersForLunch"/>

        <Button
            android:id="@+id/activity_login_btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="false"
            android:text="@string/signInWithFacebook"
            android:layout_marginTop="50dp"
            android:drawablePadding="20dp"
            android:background="@color/colorFacebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/activity_login_btn_google"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGoogle"
            android:drawablePadding="43dp"
            android:text="@string/signInWithGoogle"
            android:drawableLeft="@drawable/ic_google"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/activity_login_btn_twitter"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorText"
            android:text="@string/signInWithTwitter"
            android:textColor="@color/colorAccent"
            android:drawablePadding="40dp"
            android:drawableLeft="@drawable/ic_twitter"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>